# rusty-agent

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.agents/skills/agent-sdlc/: SKILL.md  authoring.md
.agents/skills/auto-drive-tauri/: SKILL.md
.agents/skills/context-evolve/: SKILL.md  prepare.md  program.md  train.md
.agents/skills/context-management/: SKILL.md
.claude/: settings.json
.claude/commands/: implement-subsystem.md  next-spec.md  spec-subsystem.md
.claude/skills/: agent-sdlc  auto-drive-tauri  context-evolve  graphify-best-practices  harness-engineering  harness-evolve  llama-server  tauri-okf  wayland
.githooks/: pre-push
.github/workflows/: ci.yml
.superpowers/sdd/: final-fixes-report.md
agent/: AGENTS.md  Cargo.toml  config.example.toml  mcp.example.json
agent/crates/agent-cli/: Cargo.toml
agent/crates/agent-cli/src/: approval.rs  config.rs  main.rs  render.rs
agent/crates/agent-core/: Cargo.toml
agent/crates/agent-core/src/: artifacts.rs  checkpoint.rs  compactor.rs  context.rs  context_tools.rs  curated.rs  dispatch.rs  event.rs  lib.rs  loop_.rs  middleware.rs  offload.rs  offload_policy.rs  recall.rs  response_format.rs  snapshot.rs  stats.rs  testkit.rs  todos.rs
agent/crates/agent-core/tests/: compaction_routing.rs  dispatch_tool.rs  e2e_parallel_tools.rs  e2e_sglang.rs  timeout_override.rs
agent/crates/agent-e2e/: Cargo.toml
agent/crates/agent-e2e/src/: cli.rs  forge.rs  lib.rs  rig.rs  stub.rs
agent/crates/agent-e2e/tests/: adversarial.rs  concurrency.rs  crashkill.rs  lifecycle.rs  live_smoke.rs  robustness.rs
agent/crates/agent-http/: Cargo.toml
agent/crates/agent-http/src/: content.rs  lib.rs  policy.rs  ssrf.rs  tool.rs
agent/crates/agent-mcp/: Cargo.toml
agent/crates/agent-mcp/src/: client.rs  config.rs  error.rs  lib.rs  manager.rs  tool.rs  transport.rs
agent/crates/agent-mcp/tests/: live_filesystem.rs
agent/crates/agent-memory/: Cargo.toml  README.md
agent/crates/agent-memory/src/: config.rs  embedder.rs  lib.rs  record.rs  retriever.rs  scope.rs  store.rs  tools.rs
agent/crates/agent-memory/tests/: live_embed.rs
agent/crates/agent-model/: Cargo.toml
agent/crates/agent-model/src/: claude_cli.rs  lib.rs  openai.rs  prompted.rs  protocol.rs  types.rs  wire.rs
agent/crates/agent-policy/: Cargo.toml
agent/crates/agent-policy/src/: command.rs  engine.rs  lib.rs  subagent.rs
agent/crates/agent-runtime-config/: Cargo.toml
agent/crates/agent-runtime-config/src/: assemble.rs  lib.rs  project_key.rs  prompts.rs  runtime_config.rs  session_meta.rs  trace.rs
agent/crates/agent-runtime-config/src/eval/: admissibility.rs  config.rs  gate.rs  mod.rs  result.rs  task.rs
agent/crates/agent-runtime-config/tests/: e2e_auto_retrieval.rs  e2e_context_management.rs  e2e_robustness.rs  eval_context.rs  eval_gate_cli.rs  memory_files_soak.rs  policy_corpus.rs  policy_corpus.tsv  soak_live.rs  stress_context_management.rs
agent/crates/agent-sandbox/: Cargo.toml
agent/crates/agent-sandbox/src/: docker.rs  lib.rs  mounts.rs  strategy.rs
agent/crates/agent-sandbox/tests/: escape.rs
agent/crates/agent-server/: Cargo.toml
agent/crates/agent-server/src/: approval.rs  config.rs  daemon.rs  lib.rs  main.rs  resume.rs  runtime.rs  session.rs  setup.rs  sink.rs  testkit.rs  wire.rs
agent/crates/agent-server/tests/: daemon_roundtrip.rs  serve_inbound.rs
agent/crates/agent-skills/: Cargo.toml
agent/crates/agent-skills/src/: guard.rs  lib.rs  presets.rs  registry.rs  skill.rs  tools.rs
agent/crates/agent-tools/: Cargo.toml
agent/crates/agent-tools/src/: contract.rs  git.rs  lib.rs  registry.rs  render.rs  sandbox.rs  shell.rs  tool.rs  types.rs
agent/crates/agent-tools/src/backend/: composite.rs  conformance.rs  host.rs  mem.rs  mod.rs
agent/crates/agent-tools/src/fs/: mod.rs  paths.rs  read.rs  search.rs  write.rs
agent/docs/: RUNNING.md
agent/scripts/: chat.sh  reopen_drive.exp
cloud/: RUNNING.md  package-lock.json  package.json  schema.sql  vitest.config.ts  wrangler.jsonc  wrangler.toml
cloud/patches/: @cloudflare+vitest-pool-workers+0.5.41.patch
cloud/src/: session.ts  util.ts  worker.ts
cloud/test/: session.test.ts  util.test.ts  worker.test.ts
cloud/testpage/: index.html
docs/superpowers/: NEXT-SPEC-HANDOFF.md
sandbox-image/: Dockerfile  build.sh  smoke.sh
scripts/: ci.sh  launch-web-ui.sh  okf_check.py  skills_lint.py  test_okf_check.py  test_skills_lint.py
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  channel_out.rs  devserver.rs  lib.rs  llama.rs  main.rs  workspace.rs
src-tauri/tests/: bridge.rs  e2e_live.rs  gui_lifecycle.rs  gui_smoke.rs  llama_health.rs  smoke_context_explorer.rs
src-tauri/tests/e2e_harness/: mod.rs
web/: AGENTS.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tauri.test.tsx  App.test.tsx  App.tsx  designFeedback.test.ts  designFeedback.ts  designStore.test.ts  designStore.ts  index.css  main.tsx  reasoning.test.ts  sandbox-banner.test.ts  socket.ts  state.approval.test.ts  state.dispatch.test.ts  state.parked.test.ts  state.stats.test.ts  state.stream-retry.test.ts  state.subagent.test.ts  state.ts  storage.rightTab.test.ts  storage.securityerror.test.ts  storage.ts  storage.workspace.test.ts  theme.ts  transport.test.ts  transport.ts  wire.ts
web/test/: activity-rail.test.tsx  animated-assistant-message.test.tsx  animated-error.test.tsx  animated-reasoning-message.test.tsx  animated-tool-call.test.tsx  app-shell.test.tsx  app.test.tsx  artifact-renderer.test.tsx  artifacts.test.ts  context-dashboard.test.tsx  inspector.test.tsx  markdown-text.test.tsx  message-list.test.tsx  pairing.test.tsx  settings-panel.test.tsx  shell-components.test.tsx  smoke.test.tsx  socket.test.ts  state.test.ts  storage.test.ts  theme.test.ts  timeline-view.test.tsx  tool-components.test.tsx  useAnimatedItems.test.ts  useStreamingText.test.ts  wire-display.test.ts  wire.test.ts
(+590 files in other folders)
