[package]
name = "rust-agent-runtime-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_agent_runtime_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
agent-server = { path = "../agent/crates/agent-server" }
agent-runtime-config = { path = "../agent/crates/agent-runtime-config" }
agent-tools = { path = "../agent/crates/agent-tools" }
agent-core = { path = "../agent/crates/agent-core" }
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tauri = { version = "2", features = ["test"] }
thirtyfour = "0.37.2"
agent-server = { path = "../agent/crates/agent-server", features = ["testkit"] }
