[package]
name = "agent-core"
edition.workspace = true

[dependencies]
agent-tools = { path = "../agent-tools" }
agent-policy = { path = "../agent-policy" }
agent-model = { path = "../agent-model" }
async-trait.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
