[package]
name = "agent-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-tools = { path = "../agent-tools" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
readability = "0.3"
ipnet = "2"
url = "2"

[dev-dependencies]
agent-policy = { path = "../agent-policy" }
wiremock = "0.6"
