[package]
name = "agent-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-tools = { path = "../agent-tools" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
fastembed = { version = "4", optional = true }

[features]
default = ["onnx"]
onnx = ["dep:fastembed"]

[dev-dependencies]
tempfile = { workspace = true }
