[package]
name = "agent-model"
edition.workspace = true

[dependencies]
agent-tools = { path = "../agent-tools" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-stream = "0.3"
tokio = { workspace = true }

[dev-dependencies]
wiremock.workspace = true
