[package]
name = "agent-runtime-config"
edition.workspace = true

[dependencies]
agent-tools = { path = "../agent-tools" }
agent-sandbox = { path = "../agent-sandbox" }
agent-model = { path = "../agent-model" }
agent-mcp = { path = "../agent-mcp" }
agent-http = { path = "../agent-http" }
agent-skills = { path = "../agent-skills" }
agent-memory = { path = "../agent-memory" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
