[package]
name = "agent-runtime-config"
edition.workspace = true

[dependencies]
agent-tools = { path = "../agent-tools" }
agent-core = { path = "../agent-core" }
agent-sandbox = { path = "../agent-sandbox" }
agent-model = { path = "../agent-model" }
agent-mcp = { path = "../agent-mcp" }
agent-http = { path = "../agent-http" }
agent-skills = { path = "../agent-skills" }
agent-memory = { path = "../agent-memory" }
agent-policy = { path = "../agent-policy" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
tracing.workspace = true

[dev-dependencies]
# Re-declare agent-core with the `testkit` feature so integration tests can use
# the shared ScriptedModel/AlwaysApprove doubles (feature-unified with the dep above).
agent-core = { path = "../agent-core", features = ["testkit"] }
tempfile.workspace = true
tokio.workspace = true
async-trait.workspace = true
wiremock.workspace = true
tokio-util.workspace = true
