[package]
name = "agent-sandbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-tools = { path = "../agent-tools" }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
