[package]
name = "agent-tools"
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
similar.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
